--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects - Raúl Rodríguez Ruiz</title>
+  <title>Experience - Raúl Rodríguez Ruiz</title>
   <link rel="stylesheet" href="styles.css" />
   <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js"></script>
@@ -71,260 +71,260 @@
     </button>
 <body>
 <header>
-    <h1>Raúl Rodríguez Ruiz</h1>
-    <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
-    <nav>
-        <div id="menuDropdownWrapper">
-            <button id="menuToggle" aria-label="Open menu" tabindex="0">
-                &#9776; <span id="menuToggleLabel">Education</span>
-            </button>
-            <ul id="navMenu">
-                <li class="section-menu"><a href="index.html"><span>Home</span></a></li>
-                <li class="section-menu"><a href="skills.html"><span>Skills</span></a></li>
-                <li class="section-menu"><a href="projects.html"><span>Projects</span></a></li>
-                <li class="section-menu active"><a href="experience.html"><span>Job Experience</span></a></li>
-                <li class="section-menu"><a href="education.html"><span>Education</span></a></li>
-                <li class="section-menu"><a href="#contact"><span>Contact</span></a></li>
-            </ul>
-        </div>
-    </nav>
-    <style>
-        @media (max-width: 800px) {
-            #menuDropdownWrapper {
-                position: relative;
-                max-width: 320px;
-                margin: 0 auto;
-            }
-            #menuToggle {
-                display: block;
-                width: 100%;
-                background: #007bff; /* Changed to requested blue */
-                color: #fff;
-                border: none;
-                padding: 0.7rem 1.2rem;
-                font-size: 1.2rem;
-                border-radius: 0.4rem;
-                cursor: pointer;
-                margin-bottom: 0.5rem;
-                margin-top: 1.2rem;
-                z-index: 1101;
-                transition: background 0.2s;
-                box-sizing: border-box;
-            }
-            #menuToggle:active,
-            #menuToggle:focus {
-                background: #0056b3;
-            }
-            #navMenu {
-                display: none;
-                flex-direction: column;
-                position: absolute;
-                top: 100%;
-                left: 0;
-                right: 0;
-                width: 100%;
-                background: #fff;
-                box-shadow: 0 8px 24px rgba(25,118,210,0.13);
-                border-radius: 0.5rem;
-                z-index: 1100;
-                padding: 0.2rem 0;
-                animation: fadeInMenu 0.55s;
-                max-width: none;
-                min-width: 0;
-                min-height: 2.8rem;
-            }
-            #navMenu.show {
-                display: flex;
-            }
-            #navMenu li {
-                margin: 0;
-                padding: 0;
-                border-bottom: 1px solid #e3f2fd;
-                height: 2.8rem; /* Make li height same as selectable area */
-                display: flex;
-                align-items: stretch;
-            }
-            #navMenu li:last-child {
-                border-bottom: none;
-            }
-            #navMenu a {
-                color: #1976d2;
-                text-decoration: none;
-                font-size: 1.05rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 100%;
-                height: 100%; /* Fill li height */
-                padding: 0 1rem;
-                transition: color 0.2s, background 0.2s;
-                cursor: pointer;
-                text-align: center;
-            }
-            #navMenu a:hover,
-            #navMenu a:focus,
-            #navMenu li:active > a {
-                background: #e3f2fd;
-                color: #1976d2;
-            }
-            #navMenu .active a {
-                font-weight: bold;
-                background: #bbdefb;
-                color: #1976d2;
-            }
-            @keyframes fadeInMenu {
-                from { opacity: 0; transform: translateY(-16px);}
-                to { opacity: 1; transform: translateY(0);}
-            }
-            @media (prefers-color-scheme: dark) {
-                #menuToggle {
-                    background: #23272f;
-                    color: #e3f2fd;
-                }
-                #menuToggle:active,
-                #menuToggle:focus {
-                    background: #181b20;
-                }
-                #navMenu {
-                    background: #23272f;
-                    box-shadow: 0 8px 24px rgba(30,30,30,0.13);
-                }
-                #navMenu li {
-                    border-bottom: 1px solid #444a58;
-                }
-                #navMenu a {
-                    color: #e3f2fd;
-                }
-                #navMenu a:hover,
-                #navMenu a:focus,
-                #navMenu li:active > a {
-                    background: #353a45;
-                    color: #90caf9;
-                }
-                #navMenu .active a {
-                    font-weight: bold;
-                    background: #353a45;
-                    color: #90caf9;
-                }
-            }
+  <h1>Raúl Rodríguez Ruiz</h1>
+  <p>Business Analyst | Business Management Engineer | Web dev beginner</p>
+  <nav>
+    <div id="menuDropdownWrapper">
+      <button id="menuToggle" aria-label="Open menu" tabindex="0"></button>
+        &#9776; <span id="menuToggleLabel">Job Experience</span>
+      </button>
+      <ul id="navMenu">
+        <li class="section-menu"><a href="index.html"><span>Home</span></a></li>
+        <li class="section-menu"><a href="skills.html"><span>Skills</span></a></li>
+        <li class="section-menu"><a href="projects.html"><span>Projects</span></a></li>
+        <li class="section-menu active"><a href="experience.html"><span>Job Experience</span></a></li>
+        <li class="section-menu"><a href="education.html"><span>Education</span></a></li>
+        <li class="section-menu"><a href="#contact"><span>Contact</span></a></li>
+      </ul>
+    </div>
+  </nav>
+  <style>
+    @media (max-width: 800px) {
+      #menuDropdownWrapper {
+        position: relative;
+        max-width: 320px;
+        margin: 0 auto;
+      }
+      #menuToggle {
+        display: block;
+        width: 100%;
+        background: #007bff;
+        color: #fff;
+        border: none;
+        padding: 0.7rem 1.2rem;
+        font-size: 1.2rem;
+        border-radius: 0.4rem;
+        cursor: pointer;
+        margin-bottom: 0.5rem;
+        margin-top: 1.2rem;
+        z-index: 1101;
+        transition: background 0.2s;
+        box-sizing: border-box;
+      }
+      #menuToggle:active,
+      #menuToggle:focus {
+        background: #0056b3;
+      }
+      #navMenu {
+        display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        width: 100%;
+        background: #fff;
+        box-shadow: 0 8px 24px rgba(25,118,210,0.13);
+        border-radius: 0.5rem;
+        z-index: 1100;
+        padding: 0.2rem 0;
+        animation: fadeInMenu 0.55s;
+        max-width: none;
+        min-width: 0;
+        min-height: 2.8rem;
+      }
+      #navMenu.show {
+        display: flex;
+      }
+      #navMenu li {
+        margin: 0;
+        padding: 0;
+        border-bottom: 1px solid #e3f2fd;
+        height: 2.8rem;
+        display: flex;
+        align-items: stretch;
+      }
+      #navMenu li:last-child {
+        border-bottom: none;
+      }
+      #navMenu a {
+        color: #1976d2;
+        text-decoration: none;
+        font-size: 1.05rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        padding: 0 1rem;
+        transition: color 0.2s, background 0.2s;
+        cursor: pointer;
+        text-align: center;
+      }
+      #navMenu a:hover,
+      #navMenu a:focus,
+      #navMenu li:active > a {
+        background: #e3f2fd;
+        color: #1976d2;
+      }
+      #navMenu .active a {
+        font-weight: bold;
+        background: #bbdefb;
+        color: #1976d2;
+      }
+      @keyframes fadeInMenu {
+        from { opacity: 0; transform: translateY(-16px);}
+        to { opacity: 1; transform: translateY(0);}
+      }
+      @media (prefers-color-scheme: dark) {
+        #menuToggle {
+          background: #23272f;
+          color: #e3f2fd;
         }
-        @media (min-width: 801px) {
-            #menuToggle {
-                display: none;
-            }
-            #navMenu {
-                display: flex !important;
-                position: static;
-                flex-direction: row;
-                background: none;
-                box-shadow: none;
-                border-radius: 0;
-                padding: 0;
-                max-width: none;
-            }
-            #navMenu li {
-                padding: 0 1.1rem;
-                border: none;
-            }
-            #navMenu a {
-                color: #111;
-                font-size: 1.05rem;
-                text-decoration: none;
-                transition: color 0.2s, background 0.2s;
-            }
-            #navMenu a:hover,
-            #navMenu a:focus {
-                color: #0d47a1;
-                background: #e3f2fd;
-                border-radius: 0.3rem;
-            }
-            #navMenu .active a {
-                font-weight: bold;
-                color: #0d47a1;
-                background: #bbdefb;
-                border-radius: 0.3rem;
-            }
-            @media (prefers-color-scheme: dark) {
-                #navMenu a {
-                    color: #fff;
-                }
-                #navMenu a:hover,
-                #navMenu a:focus {
-                    color: #90caf9;
-                    background: #353a45;
-                }
-                #navMenu .active a {
-                    color: #90caf9;
-                    background: #353a45;
-                }
-            }
+        #menuToggle:active,
+        #menuToggle:focus {
+          background: #181b20;
         }
-    </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const menuToggle = document.getElementById('menuToggle');
-            const navMenu = document.getElementById('navMenu');
-            const menuToggleLabel = document.getElementById('menuToggleLabel');
-            // Set menu button label to current page
-            function setMenuLabel() {
-                // Find the active menu item
-                let active = navMenu.querySelector('.active a');
-                if (!active) {
-                    // Fallback: try to match by URL
-                    let current = window.location.pathname.split('/').pop();
-                    navMenu.querySelectorAll('a').forEach(function(a) {
-                        if (a.getAttribute('href') && a.getAttribute('href').indexOf(current) !== -1) {
-                            active = a;
-                        }
-                    });
-                }
-                if (active) {
-                    menuToggleLabel.textContent = active.textContent.trim();
-                } else {
-                    menuToggleLabel.textContent = 'Menu';
-                }
+        #navMenu {
+          background: #23272f;
+          box-shadow: 0 8px 24px rgba(30,30,30,0.13);
+        }
+        #navMenu li {
+          border-bottom: 1px solid #444a58;
+        }
+        #navMenu a {
+          color: #e3f2fd;
+        }
+        #navMenu a:hover,
+        #navMenu a:focus,
+        #navMenu li:active > a {
+          background: #353a45;
+          color: #90caf9;
+        }
+        #navMenu .active a {
+          font-weight: bold;
+          background: #353a45;
+          color: #90caf9;
+        }
+      }
+    }
+    @media (min-width: 801px) {
+      #menuToggle {
+        display: none;
+      }
+      #navMenu {
+        display: flex !important;
+        position: static;
+        flex-direction: row;
+        background: none;
+        box-shadow: none;
+        border-radius: 0;
+        padding: 0;
+        max-width: none;
+      }
+      #navMenu li {
+        padding: 0 1.1rem;
+        border: none;
+      }
+      #navMenu a {
+        color: #111;
+        font-size: 1.05rem;
+        text-decoration: none;
+        transition: color 0.2s, background 0.2s;
+      }
+      #navMenu a:hover,
+      #navMenu a:focus {
+        color: #0d47a1;
+        background: #e3f2fd;
+        border-radius: 0.3rem;
+      }
+      #navMenu .active a {
+        font-weight: bold;
+        color: #0d47a1;
+        background: #bbdefb;
+        border-radius: 0.3rem;
+      }
+      @media (prefers-color-scheme: dark) {
+        #navMenu a {
+          color: #fff;
+        }
+        #navMenu a:hover,
+        #navMenu a:focus {
+          color: #90caf9;
+          background: #353a45;
+        }
+        #navMenu .active a {
+          color: #90caf9;
+          background: #353a45;
+        }
+      }
+    }
+  </style>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      const menuToggle = document.getElementById('menuToggle');
+      const navMenu = document.getElementById('navMenu');
+      const menuToggleLabel = document.getElementById('menuToggleLabel');
+      // Set menu button label to current page
+      function setMenuLabel() {
+        // Find the active menu item
+        let active = navMenu.querySelector('.active a');
+        if (!active) {
+          // Fallback: try to match by URL
+          let current = window.location.pathname.split('/').pop();
+          navMenu.querySelectorAll('a').forEach(function(a) {
+            if (a.getAttribute('href') && a.getAttribute('href').indexOf(current) !== -1) {
+              active = a;
             }
-            setMenuLabel();
+          });
+        }
+        if (active) {
+          menuToggleLabel.textContent = active.textContent.trim();
+        } else {
+          menuToggleLabel.textContent = 'Menu';
+        }
+      }
+      setMenuLabel();
 
-            // Toggle menu on click
-            menuToggle.addEventListener('click', function (e) {
-                navMenu.classList.toggle('show');
-            });
-            // Make the whole li clickable (mobile)
-            if(window.innerWidth <= 800) {
-                navMenu.querySelectorAll('li').forEach(function(li) {
-                    li.addEventListener('click', function(e) {
-                        const link = li.querySelector('a');
-                        if(link) link.click();
-                    });
-                });
-            }
-            // Close menu when clicking outside
-            document.addEventListener('click', function (e) {
-                if (
-                    window.innerWidth <= 800 &&
-                    !menuToggle.contains(e.target) &&
-                    !navMenu.contains(e.target)
-                ) {
-                    navMenu.classList.remove('show');
-                }
-            });
-            // Close menu on link click (mobile)
-            navMenu.querySelectorAll('a').forEach(function(link) {
-                link.addEventListener('click', function() {
-                    if(window.innerWidth <= 800) navMenu.classList.remove('show');
-                });
-            });
-            // Keyboard accessibility: close on Escape
-            document.addEventListener('keydown', function(e) {
-                if (e.key === 'Escape') navMenu.classList.remove('show');
-            });
+      // Toggle menu on click
+      menuToggle.addEventListener('click', function (e) {
+        navMenu.classList.toggle('show');
+      });
+      // Make the whole li clickable (mobile)
+      if(window.innerWidth <= 800) {
+        navMenu.querySelectorAll('li').forEach(function(li) {
+          li.addEventListener('click', function(e) {
+            const link = li.querySelector('a');
+            if(link) link.click();
+          });
         });
-    </script>
-  </header>
+      }
+      // Close menu when clicking outside
+      document.addEventListener('click', function (e) {
+        if (
+          window.innerWidth <= 800 &&
+          !menuToggle.contains(e.target) &&
+          !navMenu.contains(e.target)
+        ) {
+          navMenu.classList.remove('show');
+        }
+      });
+      // Close menu on link click (mobile)
+      navMenu.querySelectorAll('a').forEach(function(link) {
+        link.addEventListener('click', function() {
+          if(window.innerWidth <= 800) navMenu.classList.remove('show');
+        });
+      });
+      // Keyboard accessibility: close on Escape
+      document.addEventListener('keydown', function(e) {
+        if (e.key === 'Escape') navMenu.classList.remove('show');
+      });
+    });
+  </script>
+</header>
 
-  <section id="experience">
-    <h2 class="section-title">Job Experience</h2>
+<section id="experience">
+  <h2 class="section-title">Job Experience</h2>
 <div class="skill-controls" style="text-align:center; margin-bottom: 1rem;">
   <button class="btn-skills" onclick="expandAllSkills()">Expand All</button>
   <button class="btn-skills" onclick="collapseAllSkills()">Collapse All</button>
