--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <nav>
         <div id="menuDropdownWrapper">
             <button id="menuToggle" aria-label="Open menu" tabindex="0">
-                &#9776; <span id="menuToggleLabel">Education</span>
+                &#9776; <span id="menuToggleLabel">Index</span>
             </button>
             <ul id="navMenu">
                 <li class="section-menu active"><a href="index.html"><span>Home</span></a></li>
