--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects - Raúl Rodríguez Ruiz</title>
+  <title>Education - Raúl Rodríguez Ruiz</title>
   <link rel="stylesheet" href="styles.css" />
   <link type="image/png" href="download icon/favicon.png" rel="icon" />
   <script src="style.js"></script>
